# hypr-switcher

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
src/: app.rs  main.rs
src/hyprland/: ipc.rs  types.rs
src/icons/: resolver.rs
src/ui/: mod.rs  style.rs  window_list.rs
