[package]
name = "hypr-switcher"
version = "0.1.0"
edition = "2024"
description = "Visual Alt+Tab window switcher for Hyprland"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image", "svg", "advanced"] }
iced_layershell = "0.15"
tokio = { version = "1", features = ["net", "io-util", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
freedesktop-icons = "0.4"
xdg = "2.5"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
